<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:text="@string/score"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <GridLayout android:layout_width="0dp" android:layout_height="wrap_content"
                android:rowCount="4"
                android:columnCount="3"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
                android:text="@string/difficulte"
                android:textAlignment="center"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_columnWeight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView3" android:textSize="18sp"
                android:textAllCaps="true" android:textStyle="bold|italic"/>

        <TextView
                android:text="@string/victoire"
                android:textAlignment="center"
                android:background="@drawable/back"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView4" android:textSize="18sp"
                android:textStyle="bold|italic" android:textAllCaps="true"/>

        <TextView
                android:text="@string/defaite"
                android:textAlignment="center"
                android:background="@drawable/back"
                android:layout_column="2"
                android:layout_row="0"
                android:layout_columnWeight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView5" android:textSize="18sp"
                android:textAllCaps="true" android:textStyle="bold|italic"/>

        <TextView
                android:text="@string/facile"
                android:textAlignment="center"
                android:background="@drawable/back"
                android:layout_column="0"
                android:layout_row="1"
                android:layout_columnWeight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView6" android:textSize="18sp"
                android:textAllCaps="true" android:textStyle="bold|italic"/>

        <TextView
                android:text="@string/normal"
                android:textAlignment="center"
                android:background="@drawable/back"
                android:layout_column="0"
                android:layout_row="2"
                android:layout_columnWeight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView7" android:textSize="18sp"
                android:textAllCaps="true" android:textStyle="bold|italic"/>


        <TextView
                android:text="@string/difficile"
                android:textAlignment="center"
                android:background="@drawable/back"
                android:layout_column="0"
                android:layout_row="3"
                android:layout_columnWeight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView8" android:textSize="18sp"
                android:textAllCaps="true" android:textStyle="bold|italic"/>

        <TextView
                android:text="0"
                android:textAlignment="center"
                android:background="@drawable/back"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_columnWeight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_facilVictoire" android:textSize="18sp"
        />


        <TextView
                android:text="0"
                android:textAlignment="center"
                android:background="@drawable/back"
                android:layout_column="2"
                android:layout_row="1"
                android:layout_columnWeight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_facilDefaite" android:textSize="18sp"/>


        <TextView
                android:text="0"
                android:textAlignment="center"
                android:background="@drawable/back"
                android:layout_column="1"
                android:layout_row="2"
                android:layout_columnWeight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_normalVictoire" android:textSize="18sp"/>


        <TextView
                android:text="0"
                android:textAlignment="center"
                android:background="@drawable/back"
                android:layout_column="2"
                android:layout_row="2"
                android:layout_columnWeight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_normalDefaite" android:textSize="18sp"/>


        <TextView
                android:text="0"
                android:textAlignment="center"
                android:background="@drawable/back"
                android:layout_column="1"
                android:layout_row="3"
                android:layout_columnWeight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_difficileVictoire" android:textSize="18sp"/>


        <TextView
                android:text="0"
                android:textAlignment="center"
                android:background="@drawable/back"
                android:layout_column="2"
                android:layout_row="3"
                android:layout_columnWeight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_difficileDefaite" android:textSize="18sp"/>

    </GridLayout>

</android.support.constraint.ConstraintLayout>